--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 Eco-Friendlies versions:
-<a href="EcoIván.rar">EcoIván</a>
-<a href="EcoDani.rar">EcoDani</a>
-<a href="EcoHoHoHo.rar">EcoHoHoHo</a>
-<a href="EcoStevenHarwell.rar">EcoStevenHarwell</a>
+<a href="https://drive.google.com/open?id=19iXLFS6zwBDVcxMRGht5k_nXIwGiP7hZ">EcoIván</a>
+<a href="https://drive.google.com/open?id=1cEhJmTlhX24W10b61r9NVoBCXUQqM2Dy">EcoDani</a>
+<a href="https://drive.google.com/open?id=1CozSE-AK3DHb47OaEP_vSB_AjpfZwYmf">EcoHoHoHo</a>
+<a href="https://drive.google.com/open?id=1duUOX7OfZ_-cNo2qv8K1a0ACpBVSw5mz">EcoStevenHarwell</a>
