--- a/index.html
+++ b/index.html
@@ -6,3 +6,11 @@ Eco-Friendlies versions:
 <a href="https://drive.google.com/open?id=16WkKo8LE59ZHNy8V3Gk6uGnolj5uuQdu">EcoPizarra</a>
 <a href="https://drive.google.com/open?id=1Fe4Ide72bZuT_6tr_VbfrF2XCe9_c61C">EcoEnding</a>
 
+El juego se ha mudado a <a href="https://itch.io/">itch.io</a>, para poder obtenerlo hay que hacerse una cuenta ahí y activar el juego.
+Aquí hay varios enlaces de activación:
+<a href="https://itch.io/get-HEEw3dVtjTpT">itch.io/get-HEEw3dVtjTpT</a>
+<a href="https://itch.io/get-UV4NuchQECrN">itch.io/get-UV4NuchQECrNT</a>
+<a href="https://itch.io/get-hHAsLqQ25StS">itch.io/get-hHAsLqQ25StS</a>
+
+
+
